# cocos2d-x-external

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/engine/: engine.cpp
src/: CMakeLists.txt  README.md
src/Box2D/: CMakeLists.txt
src/android-specific/: README.md
src/android-specific/cpufeatures/: CMakeLists.txt
src/android-specific/tremolo/: CMakeLists.txt
src/bullet/src/BulletCollision/: CMakeLists.txt
src/bullet/src/BulletDynamics/: CMakeLists.txt
src/bullet/src/BulletMultiThreaded/: CMakeLists.txt
src/bullet/src/BulletSoftBody/: CMakeLists.txt
src/bullet/src/LinearMath/: CMakeLists.txt  btScalar.h
src/bullet/src/MiniCL/: CMakeLists.txt
src/chipmunk/doc/API-Reference/: _chipmunk_auto_geometry_8h_source.html  _chipmunk_body_8h_source.html  _chipmunk_constraint_8h_source.html  _chipmunk_point_cloud_sampler_8h_source.html  _chipmunk_shape_8h_source.html  _chipmunk_space_8h_source.html  _chipmunk_tile_cache_8h_source.html  chipmunk_8h_source.html  chipmunk__ffi_8h_source.html  chipmunk__private_8h_source.html  chipmunk__types_8h_source.html  class_chipmunk_basic_tile_cache-members.html  class_chipmunk_bitmap_sampler-members.html  class_chipmunk_body-members.html  class_chipmunk_c_g_context_sampler-members.html  class_chipmunk_damped_spring-members.html  class_chipmunk_gear_joint-members.html  class_chipmunk_hasty_space-members.html  class_chipmunk_pin_joint-members.html  class_chipmunk_point_cloud_sampler-members.html  class_chipmunk_point_query_info-members.html  class_chipmunk_poly_shape-members.html  class_chipmunk_polyline-members.html  class_chipmunk_polyline_set-members.html  class_chipmunk_ratchet_joint-members.html  class_chipmunk_rotary_limit_joint-members.html  class_chipmunk_segment_query_info-members.html  class_chipmunk_shape-members.html  class_chipmunk_simple_motor-members.html  class_chipmunk_slide_joint-members.html  class_chipmunk_space-members.html  classes.html  cp_arbiter_8h_source.html  cp_body_8h_source.html  cp_damped_spring_8h_source.html  cp_march_8h_source.html  cp_pivot_joint_8h_source.html  cp_polyline_8h_source.html  cp_ratchet_joint_8h_source.html  cp_robust_8h_source.html  (+102 more)
src/chipmunk/doc/API-Reference/search/: all_64.js  all_66.js  all_67.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_75.js  all_77.js  classes_6e.js  enums_63.js  functions_62.js  functions_63.js  functions_64.js  functions_69.js  functions_6b.js  functions_73.js  functions_74.js  functions_76.js  functions_77.js  groups_62.js  groups_63.js  pages_63.js  properties_64.js  properties_65.js  properties_66.js  properties_6b.js  properties_6d.js  properties_6e.js  properties_6f.js  properties_70.js  properties_72.js  properties_73.js  variables_61.js  variables_66.js  variables_6d.js  variables_70.js  variables_75.js
src/chipmunk/src/: cpPolyline.c
src/engine/: engine.cpp  engine.h
src/freetype/: CMakeLists.txt
src/jpeg/: CMakeLists.txt
src/libressl/: CMakeLists.txt  VERSION  configure
src/libressl/apps/nc/: netcat.c
src/libressl/man/: Makefile.am  Makefile.in
src/lua/: CMakeLists.txt
src/lua/src/: loslib.c
src/luajit/: .gitignore  CMakeLists.txt
src/luajit/src/: msvcbuild.bat
src/luajit/src/buildvm/: CMakeLists.txt
src/luajit/src/empty/: CMakeLists.txt  empty.c
src/luajit/src/minilua/: CMakeLists.txt
src/png/: CMakeLists.txt
src/rapidjson/include/rapidjson/: document.h
src/rapidjson/lib/: CMakeLists.txt
src/tiff/: CMakeLists.txt
src/uv/: CMakeLists.txt
src/webp/: CMakeLists.txt
src/webp/examples/: Makefile.in
src/webp/src/: Makefile.in
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt  engine.cpp  engine.h
tests/game1/: CMakeLists.txt  main.cpp
tests/game1/android/app/: build.gradle
tests/game1/android/app/src/main/cpp/: hello-jni.cpp
tests/game1/android/app/src/main/java/com/example/hellojni/: HelloJni.java
tests/game2/: CMakeLists.txt  main.cpp
tests/game2/android/app/: build.gradle
tests/game2/android/app/src/main/cpp/: hello-jni.cpp
tests/game2/android/app/src/main/java/com/example/hellojni/: HelloJni.java
tools/: android_arm64_v8a_toolchain.cmake  android_armeabi_v7a_toolchain.cmake  android_x86_64_toolchain.cmake  android_x86_toolchain.cmake  ios.toolchain.cmake
tools/appveyor-scripts/: before-build.ps1  build.ps1  setup_android.py
tools/travis-scripts/: before-install.sh  run-script.sh
